# verdiclip

./: .gitignore  ATTRIBUTION.md  README.md  pyproject.toml
docs/: architecture.md  developer-guide.md  requirements.md  user-guide.md
docs/architecture/: overview.md
docs/guides/: developer-guide.md
docs/specifications/: requirements.md
resources/: default_config.README.md  default_config.json
resources/icons/: .gitkeep  README.md
resources/icons/tools/: .gitkeep
scripts/: Build-Release.ps1  Setup-DevEnvironment.ps1
src/verdiclip/: __init__.py  __main__.py  app.py  cli.py  config.py
src/verdiclip/capture/: __init__.py  region.py  repeat.py  screen.py  window.py  window_picker.py
src/verdiclip/editor/: __init__.py  canvas.py  history.py  properties.py  serialization.py  toolbar.py  window.py
src/verdiclip/editor/tools/: __init__.py  arrow.py  base.py  crop.py  ellipse.py  freehand.py  handles.py  highlight.py  line.py  number.py  obfuscate.py  rectangle.py  select.py  text.py
src/verdiclip/export/: __init__.py  clipboard.py  file_export.py  printer.py
src/verdiclip/hotkeys/: __init__.py  manager.py
src/verdiclip/tray/: __init__.py  icon.py
src/verdiclip/ui/: __init__.py  about_dialog.py  settings_dialog.py
tests/: conftest.py
tests/integration/: test_capture_to_editor.py  test_editor_to_export.py  test_multi_tool_workflow.py
tests/performance/: test_capture_speed.py  test_memory_usage.py
tests/unit/: test_about_dialog.py  test_app.py  test_capture_region.py  test_capture_repeat.py  test_capture_screen.py  test_capture_window.py  test_cli.py  test_config.py  test_editor_canvas.py  test_editor_history.py  test_editor_properties.py  test_editor_toolbar.py  test_editor_tools.py  test_export_clipboard.py  test_export_file.py  test_export_printer.py  test_hotkeys.py  test_main.py  test_serialization.py  test_settings_dialog.py  test_tray_icon.py  test_window_picker.py
