[project]
name = "verdiclip"
version = "0.1.0"
description = "A performant screenshot and annotation tool for Windows, inspired by Greenshot."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mike Hill", email = "mike@mikejhill.com" }
]
requires-python = ">=3.12"
keywords = ["screenshot", "annotation", "screen-capture", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PySide6>=6.7,<7",
    "Pillow>=10.0,<12",
    "mss>=9.0,<10",
    "pynput>=1.7,<2",
]

[project.urls]
Homepage = "https://github.com/mikejhill/verdiclip"
Repository = "https://github.com/mikejhill/verdiclip"
Issues = "https://github.com/mikejhill/verdiclip/issues"
Documentation = "https://github.com/mikejhill/verdiclip/tree/main/docs"

[project.scripts]
verdiclip = "verdiclip.__main__:main"

[project.gui-scripts]
verdiclip-gui = "verdiclip.__main__:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-qt>=4.4,<5",
    "pytest-benchmark>=5.0,<6",
    "pytest-cov>=6.0,<7",
    "ruff>=0.9,<1",
    "ty>=0.0.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF", "D", "ANN", "PT", "RET", "ARG"]
ignore = [
    "D100",   # Missing docstring in public module (module header docstring suffices)
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__ (class docstring suffices)
    "N802",   # Qt overrides use camelCase (e.g., paintEvent, mousePressEvent)
    "N803",   # Qt callback parameters use camelCase
    "ANN401", # Dynamically typed expressions (Any) — needed for Qt/pynput interop
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["verdiclip"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D101",   # Missing docstring in public class (test classes are self-documenting)
    "D102",   # Missing docstring in public method (test methods are self-documenting)
    "D103",   # Missing docstring in public function (test helpers are self-documenting)
    "ANN",    # Type annotations not required in tests
    "ARG",    # Unused arguments common in fixtures/parametrize
]
"src/verdiclip/editor/tools/*.py" = [
    "ARG002", # Qt override signatures require unused params (event, scene_pos)
]
"src/verdiclip/capture/*.py" = [
    "ARG002", # Qt override signatures require unused params
]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
qt_api = "pyside6"
